// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code renders a simple text code correctly 1`] = `
<DocumentFragment>
  <code
    class="code small fontWeightRegular"
  >
    I am a code
  </code>
</DocumentFragment>
`;

exports[`Code supports rendering as different elements 1`] = `
<DocumentFragment>
  <div
    class="code small fontWeightRegular"
  >
    I am a code
  </div>
</DocumentFragment>
`;
